--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Orbitron', sans-serif;
-      background: url('Spritz.png') no-repeat center center fixed;
+      background: url('spritz.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       display: flex;
@@ -68,8 +68,6 @@
   resize: vertical;
   font-size: 1.5em;
 }
-
-
     .button-group {
       display: flex;
       justify-content: space-between;
